# oarepo-model-builder-nr

./: .gitignore  README.md  run-tests.sh  setup.cfg
.github/workflows/: main.yml
oarepo_model_builder_nr/models/: nr_common_metadata.yaml  nr_datatypes.yaml  nr_documents.yaml
tests/: nr_common_metadata_model.yaml  nr_documents_metadata_model.yaml  nr_theses_metadata_model.yaml
tests/nr-common-test-model/: pyproject.toml  setup.cfg
tests/nr-common-test-model/nr_common_test_model/: cli.py  config.py  ext.py  proxies.py  views.py
tests/nr-common-test-model/nr_common_test_model/models/: model.json  records.json  ui.json
tests/nr-common-test-model/nr_common_test_model/records/: api.py  dumper.py  models.py  multilingual_dumper.py
tests/nr-common-test-model/nr_common_test_model/records/jsonschemas/: nr_common_test_model-1.0.0.json
tests/nr-common-test-model/nr_common_test_model/records/mappings/os-v2/nr_common_test_model/: nr_common_test_model-1.0.0.json
tests/nr-common-test-model/nr_common_test_model/resources/records/: config.py  resource.py  ui.py
tests/nr-common-test-model/nr_common_test_model/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
tests/nr-common-test-model/nr_common_test_model/translations/: messages.pot
tests/nr-common-test-model/nr_common_test_model/translations/cs/LC_MESSAGES/: messages.po
tests/nr-common-test-model/nr_common_test_model/translations/en/LC_MESSAGES/: messages.po
tests/nr-common-test-model/nr_common_test_model/views/records/: api.py  app.py
tests/nr-common-test-model/nr_metadata/common/services/records/: schema.py  ui_schema.py
tests/nr-common-test-model/tests/: conftest.py  test_resource.py  test_service.py
tests/nr-documents-test-model/: setup.cfg
tests/nr-documents-test-model/nr_documents_test_model/: cli.py  config.py  ext.py  proxies.py  views.py
tests/nr-documents-test-model/nr_documents_test_model/models/: model.json  records.json  ui.json
tests/nr-documents-test-model/nr_documents_test_model/records/: api.py  dumper.py  models.py  multilingual_dumper.py
tests/nr-documents-test-model/nr_documents_test_model/records/jsonschemas/: nr_documents_test_model-1.0.0.json
tests/nr-documents-test-model/nr_documents_test_model/records/mappings/os-v2/nr_documents_test_model/: nr_documents_test_model-1.0.0.json
tests/nr-documents-test-model/nr_documents_test_model/resources/records/: config.py  resource.py  ui.py
tests/nr-documents-test-model/nr_documents_test_model/services/records/: config.py  facets.py  permissions.py  search.py  service.py
tests/nr-documents-test-model/nr_documents_test_model/translations/: messages.pot
tests/nr-documents-test-model/nr_documents_test_model/translations/cs/LC_MESSAGES/: messages.po
tests/nr-documents-test-model/nr_documents_test_model/translations/en/LC_MESSAGES/: messages.po
tests/nr-documents-test-model/nr_documents_test_model/views/records/: api.py  app.py
tests/nr-documents-test-model/nr_metadata/common/services/records/: schema.py  ui_schema.py
tests/nr-documents-test-model/nr_metadata/documents/services/records/: schema.py  ui_schema.py
tests/nr-documents-test-model/tests/: conftest.py  test_resource.py  test_service.py
tests/nr-theses-test-model/: setup.cfg
tests/nr-theses-test-model/nr_metadata/common/services/records/: schema.py  ui_schema.py
tests/nr-theses-test-model/nr_metadata/theses/services/records/: schema.py  ui_schema.py
tests/nr-theses-test-model/nr_theses_test_model/: cli.py  config.py  ext.py  proxies.py  views.py
tests/nr-theses-test-model/nr_theses_test_model/models/: model.json  ui.json
tests/nr-theses-test-model/nr_theses_test_model/records/: api.py  dumper.py  models.py
tests/nr-theses-test-model/nr_theses_test_model/records/jsonschemas/: nr_theses_test_model-1.0.0.json
tests/nr-theses-test-model/nr_theses_test_model/records/mappings/os-v2/nr_theses_test_model/: nr_theses_test_model-1.0.0.json
tests/nr-theses-test-model/nr_theses_test_model/resources/records/: config.py  resource.py  ui.py
tests/nr-theses-test-model/nr_theses_test_model/services/records/: config.py  permissions.py  search.py  service.py
tests/nr-theses-test-model/nr_theses_test_model/translations/: messages.pot
tests/nr-theses-test-model/nr_theses_test_model/translations/cs/LC_MESSAGES/: messages.po
tests/nr-theses-test-model/nr_theses_test_model/translations/en/LC_MESSAGES/: messages.po
