

[metadata]
name = nr-common-test-model
version = 1.0.0
description = A sample application for nr_common_test_model
authors = 


[options]
python = >=3.9
install_requires =
    invenio_access>=1.4.4
    invenio_app>=1.3.4
    invenio_db>=1.0.14
    invenio_pidstore>=1.2.3
    invenio_records>=2.0.0
    invenio-records-rest>=2.1.0
    invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.21.4
    invenio-search>=2.1.0
    tqdm>=4.64.1
    oarepo-runtime>=1.0.0
    invenio_vocabularies>=1.0.4
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = nr_common_test_model = nr_common_test_model.ext:NrCommonTestModelExt
invenio_base.apps = nr_common_test_model = nr_common_test_model.ext:NrCommonTestModelExt
invenio_db.alembic = nr_common_test_model = nr_common_test_model:alembic
invenio_db.models = nr_common_test_model = nr_common_test_model.records.models
invenio_base.api_blueprints = nr_common_test_model = nr_common_test_model.views:create_blueprint_from_app_nr_common_test_model
invenio_base.blueprints = nr_common_test_model = nr_common_test_model.views:create_blueprint_from_app_nr_common_test_modelExt
invenio_search.mappings = nr_common_test_model = nr_common_test_model.records.mappings
invenio_jsonschemas.schemas = nr_common_test_model = nr_common_test_model.records.jsonschemas
oarepo.models = nr_common_test_model = nr_common_test_model.models:model.json
flask.commands = nr_common_test_model = nr_common_test_model.cli:group
invenio_i18n.translations = nr_common_test_model = nr_common_test_model
oarepo.ui = nr_common_test_model = nr_common_test_model.models:ui.json


[options.extras_require]
tests =
    invenio-app>=1.3.3
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0.0
    pytest-invenio>=1.4.11
    invenio_search[opensearch2]>=2.0.0
    Werkzeug>=2.2.3
    Flask-Login>=0.6.1
    pyyaml>=6.0
    requests>=2.28.1
