

[metadata]
name = nr-documents-test-model
version = 1.0.0
description = Repository model for Nr_Documents_Test_Model
authors = 


[options]
python = >=3.9
install_requires =
    oarepo>=11,<12
    oarepo-runtime>=1.0.0
    deepmerge>=1.1.0
    oarepo-vocabularies>=2.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = nr_documents_test_model = nr_documents_test_model.ext:Nr_documents_test_modelExt
invenio_base.apps = nr_documents_test_model = nr_documents_test_model.ext:Nr_documents_test_modelExt
invenio_db.alembic = nr_documents_test_model = nr_documents_test_model:alembic
invenio_db.models = nr_documents_test_model = nr_documents_test_model.records.models
invenio_base.api_blueprints = nr_documents_test_model = nr_documents_test_model.views.records.api:create_api_blueprint
invenio_base.blueprints = nr_documents_test_model = nr_documents_test_model.views.records.app:create_app_blueprint
invenio_search.mappings = nr_documents_test_model = nr_documents_test_model.records.mappings
invenio_jsonschemas.schemas = nr_documents_test_model = nr_documents_test_model.records.jsonschemas
oarepo.models = nr_documents_test_model = nr_documents_test_model.models:records.json
invenio_i18n.translations = nr_documents_test_model = nr_documents_test_model
oarepo.ui = nr_documents_test_model = nr_documents_test_model.models:ui.json


[options.extras_require]
tests = pytest-invenio>=1.4.11
